# Ledgerly-MVP

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.agents/skills/work-off-github-issues/: SKILL.md
.agents/skills/work-ready-issues/: SKILL.md
docs/: architecture.md  pitch.md  product-thesis.md  value-proposition.md  workspace-layout.md
docs/adr/: 0001-local-desktop-app-with-cross-platform-path.md
docs/agents/: domain.md
docs/example-statements/: Capital-One-Checking-excerpt.csv  Capital-One-Credit-Card-excerpt.csv  Southside-Bank-Checking-excerpt.csv
e2e/: workspace-lifecycle.spec.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: workspace.rs
src-tauri/src/workspace/: ai_adapter.rs  approval.rs  beancount.rs  categorization_rules.rs  create.rs  errors.rs  golden_path_validation.rs  imports.rs  mod.rs  open.rs  paths.rs  reports.rs  source_accounts.rs  types.rs  validation.rs
src/components/: AppShell.tsx
src/features/workspace/: AiAdapterPanel.test.tsx  AiAdapterPanel.tsx  CategorizationRulesPanel.test.tsx  CategorizationRulesPanel.tsx  CreateWorkspaceForm.test.tsx  CreateWorkspaceForm.tsx  CsvImportSetup.test.tsx  CsvImportSetup.tsx  MvpReportsPanel.test.tsx  MvpReportsPanel.tsx  OpenWorkspaceForm.test.tsx  OpenWorkspaceForm.tsx  SourceAccountSetup.test.tsx  SourceAccountSetup.tsx  SuggestedEntryReview.test.tsx  SuggestedEntryReview.tsx  WorkspaceOverview.test.tsx  (+3 more)
(+3 files in other folders)
