[package]
name = "ledgerly"
version = "0.1.0"
description = "Ledgerly local-first accounting workspace"
authors = ["Ledgerly"]
edition = "2021"

[lib]
name = "ledgerly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.0.0", features = [] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
